gccida/c3/rtx_equal_for_cselib_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_cselib_p/src/cselib.c:894:26: error: use of undeclared identifier 'machine_mode'
v5 = cselib_lookup( x, ( machine_mode)BYTE2( v4), 0); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_cselib_p/src/cselib.c:901:26: error: use of undeclared identifier 'machine_mode'
v7 = cselib_lookup( y, ( machine_mode)BYTE2( v6), 0); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_cselib_p/src/cselib.c:933:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)val_rtx->fld[0]; 
                       ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_cselib_p/src/cselib.c:998:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)val_rtx->fld[0]; 
                       ^~~~~~~~~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rtx_equal_for_cselib_p/src/obj/cselib.o] Error 1
